<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="#0ff"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/donor_name_tv_Donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/name"
            />

        <TextView
            android:id="@+id/donor_phone_tv_Donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:hint="@string/phone"
            />

        <TextView
            android:id="@+id/donor_email_tv_Donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            />


        <TextView
            android:id="@+id/donor_bloodtype_tv_Donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:hint="@string/blood"
            />




        <Button
            android:id="@+id/btn_Accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:text="ok!" />


    </LinearLayout>
</RelativeLayout>
