 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:fillViewport="false"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:background="@color/primary"
        tools:context="com.karim.savelives.Loginform">



            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_gravity="center"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="274dp"
                    android:layout_height="121dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="40dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <EditText
                    android:id="@+id/loginform_input_usermobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username" />

                <EditText
                    android:id="@+id/loginform_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

                <Button
                    android:id="@+id/loginform_button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:background="@drawable/white_button_bg"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/loginform_button_register"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:background="@drawable/transparent_black_ten_percent"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/loginform_button_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:background="@drawable/transparent_black_ten_percent"
                    android:text="@string/forgot_password" />

            </LinearLayout>

    </ScrollView>

