<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    tools:context="com.karim.savelives.Registration_Activity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:src="@drawable/logo_color" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_MobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/input_BloodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="BloodType"
            android:inputType="text" />


        <EditText
            android:id="@+id/input_userphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />


        <!--<EditText-->
        <!--android:id="@+id/input_password_confirm"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPassword"-->
        <!--android:hint="@string/confirm_password" />-->

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>